testsuite/tests/properties/invalid_set/two_type_params.lkt
import common

class Example: FooNode {
    @external() fun test(): Set[Int, Bool]
}

